--- a/clientside/trial.html
+++ b/clientside/trial.html
@@ -10,7 +10,7 @@
 
 	<div id = "main">
 		<div id = "left">
-			<button type="button" onclick = loadLeft(); >click me!</button>
+			<button type="button" onclick = loadPosts(); >click me!</button>
 			<div class="contentBox">
 				<div class = "contentBoxLeft">
 					<div class="titleBox">
