working on time of post

--- a/clientside/trial.html
+++ b/clientside/trial.html
@@ -10,12 +10,17 @@
 
 	<div id = "main">
 		<div id = "left">
-			<button type="button" onclick = loadPosts(); >click me!</button>
+			<button type="button" onclick = loadPosts(); >click to load posts</button>
 			<div class="contentBox">
 				<div class = "contentBoxLeft">
 					<div class="titleBox">
-						<div class="upvote"></div>
-						<div class="downvote"></div>
+						<div class="upDown">
+							<div class="upvote"></div>
+							<div class="downvote"></div>
+						</div>
+						<div class = "title">
+							pootis
+						</div>
 					</div>
 					<div class="others"></div>
 				</div>
