--- a/clientside/trial.html
+++ b/clientside/trial.html
@@ -22,7 +22,8 @@
 							pootis
 						</div>
 					</div>
-					<div class="others"></div>
+					<div class="others"> 		
+					</div>
 				</div>
 				<div class="imgBox">
 
