update html and js from john
playing around with colors and arrow

--- a/clientside/trial.html
+++ b/clientside/trial.html
@@ -22,13 +22,31 @@
 							pootis
 						</div>
 					</div>
-					<div class="others"> 		
+					<div class="others"> 
+							
 					</div>
 				</div>
 				<div class="imgBox">
 
 				</div>
 			</div>
+			<div class=contentBox>
+				<div class =contentBoxLeft>
+					<div class=titleBox>
+						<div class=upDown>
+							<div class=upvote></div>
+							<div class=downvote></div>
+						</div>
+						<div class=title>
+							<p class=paragraphTitle>Title Goes Here</p>
+							<p class=paragraphSubmitted>Submitted by User at Time</p>
+						</div>
+					</div>
+					<div class=others>
+						<div id="123123123" class="comment" onclick=viewComments(this)>Comments</div>
+					</div>
+				</div>
+					<div class=imgBox><img src=a.png></img></div></div>
 
 
 		</div>
