--- a/clientside/trial.html
+++ b/clientside/trial.html
@@ -4,6 +4,8 @@
 <script src = "jquery.js"></script>
 <script src = "script.js"></script>
 <link rel="stylesheet" type="text/css" href="css.css">
+<link href='http://fonts.googleapis.com/css?family=Noticia+Text' rel='stylesheet' type='text/css'>
+<link href='http://fonts.googleapis.com/css?family=Noto+Sans' rel='stylesheet' type='text/css'>
 </head>
 <body>
 	<div id = "top"></div>
@@ -22,13 +24,9 @@
 							pootis
 						</div>
 					</div>
-					<div class="others"> 
-							
-					</div>
-				</div>
-				<div class="imgBox">
 
 				</div>
+	
 			</div>
 			<div class=contentBox>
 				<div class =contentBoxLeft>
