--- a/clientside/trial.html
+++ b/clientside/trial.html
@@ -26,7 +26,9 @@
 					</div>
 
 				</div>
-	
+				<div class="imgBox">
+
+				</div>
 			</div>
 			<div class=contentBox>
 				<div class =contentBoxLeft>
@@ -40,11 +42,9 @@
 							<p class=paragraphSubmitted>Submitted by User at Time</p>
 						</div>
 					</div>
-					<div class=others>
-						<div id="123123123" class="comment" onclick=viewComments(this)>Comments</div>
-					</div>
+
 				</div>
-					<div class=imgBox><img src=a.png></img></div></div>
+			<div class=imgBox><img src=a.png></img></div></div>
 
 
 		</div>
