Pic preview on right, better post formatting

--- a/clientside/trial.html
+++ b/clientside/trial.html
@@ -24,11 +24,12 @@
 							pootis
 						</div>
 					</div>
-
+					<div class="others"> 
+							
+					</div>
 				</div>
-				<div class="imgBox">
-
-				</div>
+				<div class="topComment"></div>
+				<div class="imgBox"></div>
 			</div>
 			<div class=contentBox>
 				<div class =contentBoxLeft>
@@ -42,9 +43,11 @@
 							<p class=paragraphSubmitted>Submitted by User at Time</p>
 						</div>
 					</div>
-
+					<div class=others>
+						<div id="123123123" class="comment" onclick=viewComments(this)>Comments</div>
+					</div>
 				</div>
-			<div class=imgBox><img src=a.png></img></div></div>
+					<div class=imgBox><img src=a.png></img></div></div>
 
 
 		</div>
