--- a/clientside/trial.html
+++ b/clientside/trial.html
@@ -4,7 +4,7 @@
 <script src = "jquery.js"></script>
 <script src = "script.js"></script>
 <link rel="stylesheet" type="text/css" href="css.css">
-<link href='http://fonts.googleapis.com/css?family=Noto+Sans' rel='stylesheet' type='text/css'>
+<link href='http://fonts.googleapis.com/css?family=Lato:100,300' rel='stylesheet' type='text/css'>
 </head>
 <body>
 	<div id = "top"></div>
