top comment added

--- a/clientside/trial.html
+++ b/clientside/trial.html
@@ -20,12 +20,12 @@
 							<div class=downvote></div>
 						</div>
 						<div class=title>
-							<p class=paragraphTitle>Title Goes Here</p>
-							<p class=paragraphSubmitted>Submitted by User at Time</p>
+							<div class=paragraphTitle>Title Goes Here</div>
+							<div class=paragraphSubmitted>Submitted by User at Time</div>
 						</div>
 					</div>
 					<div class=imgOthers>
-						<div id="123123123" class="comment" onclick=viewComments(this)>Total Comments:10000</div>
+						<div id="123123123" class="comment" onclick=viewComments(this)>1000 total comments<hr/>I really liked what we did to that box. I think it was definitely for the best</div>
 					</div>
 				</div>
 					<div class=imgBox><img src=a.png></img></div>
